--- a/LSTM Model.ipynb
+++ b/LSTM Model.ipynb
@@ -2,12 +2,197 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys, os, re, csv, codecs, numpy as np, pandas as pd\n",
+    "\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from keras.layers import Dense, Input, LSTM, Embedding, Dropout, Activation\n",
+    "from keras.layers import Bidirectional, GlobalMaxPool1D\n",
+    "from keras.models import Model\n",
+    "from keras import initializers, regularizers, constraints, optimizers, layers,callbacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EMBEDDING_FILE= 'glove.6B.100d.txt'\n",
+    "TRAIN_DATA_FILE= 'train.csv'\n",
+    "TEST_DATA_FILE= 'test.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed_size = 100 # how big is each word vector\n",
+    "max_features = 50000 # how many unique words to use (i.e num rows in embedding vector)\n",
+    "maxlen = 100 # max number of words in a comment to use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(TRAIN_DATA_FILE)\n",
+    "test = pd.read_csv(TEST_DATA_FILE)\n",
+    "\n",
+    "list_sentences_train = train[\"comment_text\"].fillna(\"_na_\").values\n",
+    "list_classes = [\"toxic\", \"severe_toxic\", \"obscene\", \"threat\", \"insult\", \"identity_hate\"]\n",
+    "y = train[list_classes].values\n",
+    "list_sentences_test = test[\"comment_text\"].fillna(\"_na_\").values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = Tokenizer(num_words=max_features)\n",
+    "tokenizer.fit_on_texts(list(list_sentences_train))\n",
+    "list_tokenized_train = tokenizer.texts_to_sequences(list_sentences_train)\n",
+    "list_tokenized_test = tokenizer.texts_to_sequences(list_sentences_test)\n",
+    "X_t = pad_sequences(list_tokenized_train, maxlen=maxlen)\n",
+    "X_te = pad_sequences(list_tokenized_test, maxlen=maxlen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_coefs(word,*arr): return word, np.asarray(arr, dtype='float32')\n",
+    "embeddings_index = dict(get_coefs(*o.strip().split()) for o in open(EMBEDDING_FILE, encoding=\"utf8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0044520046, 0.40815717)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_embs = np.stack(embeddings_index.values())\n",
+    "emb_mean,emb_std = all_embs.mean(), all_embs.std()\n",
+    "emb_mean,emb_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_index = tokenizer.word_index\n",
+    "nb_words = min(max_features, len(word_index))\n",
+    "embedding_matrix = np.random.normal(emb_mean, emb_std, (nb_words, embed_size))\n",
+    "for word, i in word_index.items():\n",
+    "    if i >= max_features: continue\n",
+    "    embedding_vector = embeddings_index.get(word)\n",
+    "    if embedding_vector is not None: embedding_matrix[i] = embedding_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp = Input(shape=(maxlen,))\n",
+    "x = Embedding(max_features, embed_size, weights=[embedding_matrix])(inp)\n",
+    "x = Bidirectional(LSTM(50, return_sequences=True, dropout=0.1, recurrent_dropout=0.1))(x)\n",
+    "x = GlobalMaxPool1D()(x)\n",
+    "x = Dense(50, activation=\"relu\")(x)\n",
+    "x = Dropout(0.1)(x)\n",
+    "x = Dense(6, activation=\"sigmoid\")(x)\n",
+    "model = Model(inputs=inp, outputs=x)\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "es = callbacks.EarlyStopping(monitor='val_loss', min_delta=0, patience=0, verbose=0, mode='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 143613 samples, validate on 15958 samples\n",
+      "Epoch 1/10\n",
+      "143613/143613 [==============================] - 1316s 9ms/step - loss: 0.0583 - acc: 0.9794 - val_loss: 0.0475 - val_acc: 0.9822\n",
+      "Epoch 2/10\n",
+      "143613/143613 [==============================] - 1206s 8ms/step - loss: 0.0418 - acc: 0.9838 - val_loss: 0.0451 - val_acc: 0.9828\n",
+      "Epoch 3/10\n",
+      "143613/143613 [==============================] - 1068s 7ms/step - loss: 0.0357 - acc: 0.9856 - val_loss: 0.0477 - val_acc: 0.9832\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x26431185e48>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_t, y, batch_size=32, epochs=10, validation_split=0.1, callbacks=[es])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153164/153164 [==============================] - 137s 892us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test = model.predict([X_te], batch_size=1024, verbose=1)\n",
+    "sample_submission = pd.read_csv('sample_submission.csv')\n",
+    "sample_submission[list_classes] = y_test\n",
+    "sample_submission.to_csv('lstmv3.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#0.9792"
+   ]
   }
  ],
  "metadata": {
@@ -26,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
